kube/second/Networking and Security/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
    - port: 27017
  clusterIP: None
  selector:
    app: mongo
